add copy to df2

--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -1265,9 +1265,10 @@
     }
    ],
    "source": [
-    "df2['intercept'] = 1\n",
-    "df2[['drop', 'ab_page']] = pd.get_dummies(df2['group'])\n",
-    "df2.drop('drop', axis=1, inplace=True)\n",
+    "df2_new = df2.copy()\n",
+    "df2_new['intercept'] = 1\n",
+    "df2_new[['drop', 'ab_page']] = pd.get_dummies(df2['group'])\n",
+    "df2_new.drop('drop', axis=1, inplace=True)\n",
     "df2.head()"
    ]
   },
